<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#000000"
    >
    
    <ImageView
    	android:id="@+id/ackbar_image"
    	android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:layout_gravity="center_horizontal"
    	android:layout_margin="10dip"
    	/>
    
	<TextView  
        android:id="@+id/statement"
	    android:layout_width="fill_parent" 
	    android:layout_height="wrap_content" 
	    android:text="Question from Ackbar"
	    android:background="#FFFFFF"
	    />
	    
	<LinearLayout
    	android:orientation="horizontal"
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:background="#FFFFFF"
    	>
    	
	    	<TextView android:id="@+id/round"
		        android:layout_width="wrap_content" 
		        android:layout_height="wrap_content" 
		        android:text="@string/round" />
		    
	    	<TextView android:id="@+id/score" 
		        android:layout_width="wrap_content" 
		        android:layout_height="wrap_content" 
		        android:text="@string/score" />
    	
    </LinearLayout>
    
    <LinearLayout
    	android:orientation="horizontal"
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:background="#FFFFFF">
    	
	    	<Button android:id="@+id/trap_button" 
		        android:layout_width="wrap_content" 
		        android:layout_height="wrap_content" 
		        android:text="@string/its_a_trap"/>
		    
	    	<Button android:id="@+id/not_trap_button"
		        android:layout_width="wrap_content" 
		        android:layout_height="wrap_content" 
		        android:text="@string/not_a_trap"/>
    	
    </LinearLayout>
	    
</LinearLayout>

